--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -182,24 +182,29 @@
                                      aria-labelledby="headingOne">
                                     <ul class="list-group">
                                         {% for step in scenario.steps %}
-                                            <li class="list-group-item alert alert-{% if step.isPassed %}success{% elseif step.isSkipped %}info{% elseif step.isPending %}warning{% else %}danger{% endif %}">
-                                                <b>{{ step.keyword }}</b> {{ step.text }}
-                                                {% if printStepArgs is not null %}
-                                                    {% for argument in step.arguments %}
-                                                        <p style="padding-left:0.5em; overflow-x:scroll; white-space:nowrap; font-family:monospace">{{ argument | nl2br }}</p>
-                                                    {% endfor %}
-                                                {% endif %}
-                                                {% if step.exception is not null %}
-                                                    <br>
-                                                    <p style="padding-left:2em ; color:gray">({{ step.exception }})</p>
-                                                {% endif %}
-                                                {% if step.output is not null %}
-                                                    <br>
-                                                    <p style="padding-left:2em ; color:black">| {{ step.output }}</p>
-                                                {% endif %}
-                                                {% if printLoopBreak is not null and ( loop.index % scenario.getLoopSize ) == 0 and loop.last != true  %}
-                                                    </li><li class="list-group-item break">
-                                                {% endif %}
+                                        <li class="list-group-item alert alert-{% if step.isPassed %}success{% elseif step.isSkipped %}info{% elseif step.isPending %}warning{% else %}danger{% endif %}">
+                                            <b>{{ step.keyword }}</b> {{ step.text }}
+                                            {% if printStepArgs is not null %}
+                                                {% for argument in step.arguments %}
+                                                    <p style="padding-left:0.5em; overflow-x:scroll; white-space:nowrap; font-family:monospace">{{ argument | nl2br }}</p>
+                                                {% endfor %}
+                                            {% endif %}
+                                            {% if step.exception is not null %}
+                                                <br>
+                                                <p style="padding-left:2em ; color:gray">({{ step.exception }})</p>
+                                            {% endif %}
+                                            {% if step.output is not null %}
+                                                <br>
+                                                <p style="padding-left:2em ; color:black">| {{ step.output }}</p>
+                                            {% endif %}
+                                            {% if printLoopBreak is not null and ( loop.index % scenario.getLoopSize ) == 0 and loop.last != true  %}
+                                                </li><li class="list-group-item break">
+                                            {% endif %}
+
+                                            {% if not step.isPassed %}
+                                                {% set stepScreenshot = 'assets/screenshots/' ~ feature.getScreenshotFolder ~ '/' ~ scenario.getScreenshotName %}
+                                                <img src="{{ stepScreenshot }}" width="100%">
+                                            {% endif %}
                                             </li>
                                             {#<div class="bs-callout bs-callout-{% if step.passed %}success{% else %}danger{% endif %}" id="callout-collapse-accessibility">#}
                                             {#<b>{{ step.keyword }}</b> {{ step.text }}#}
